--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
     "js-base64": "^3.7.2",
+    "v-clipboard": "^2.2.3",
     "video.js": "^7.17.0",
     "vue": "^2.6.11",
+    "vue-clipboard": "0.0.1",
     "vue-router": "^3.2.0",
     "vue-video-player": "^5.0.2",
     "vuex": "^3.4.0"
