--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
     "js-base64": "^3.7.2",
+    "moment": "^2.29.1",
     "v-clipboard": "^2.2.3",
     "video.js": "^7.17.0",
     "vue": "^2.6.11",
